Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44666

QML WebEngineView stealing mouse events after opening a context menu

    XMLWordPrintable

Details

    Description

      After opening a context menu by right clicking WebEngineView and selecting some menu item, all mouse events go only to WebEngineView after the menu is closed. Clicking any other QML items has no effect. Other QML items can be clicked only after the WebEngineView is right clicked again.

      Attaching a simple QML file (WebEngineTest.qml) with which the issue can be reproduced. Clicking the 'Reload' button has no effect after a context menu has been shown for the WebEngineView.

      Steps to reproduce:
      1. Select some text from WebEngineView
      2. Open context menu by right clicking the selected text
      3. Click "Copy" action from menu
      4. Click "Reload" button located under WebEngineView

      Expected:
      Web page should reload.

      Actual:
      Nothing happens.

      Attachments

        1. WebEngineTest.qml
          0.4 kB
          Juho Frits
        For Gerrit Dashboard: QTBUG-44666
        # Subject Branch Project Status CR V

        Activity

          People

            alexandru.croitor Alexandru Croitor
            jfrits Juho Frits
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes